// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boosts-indexer evaluateUserBoosts adds user boost if applicable 1`] = `
Object {
  "0xe6487033F5C8e2b4726AF54CA1449FEC18Bd1484": Array [
    CachedBoostMultiplier {
      "address": "0xe6487033F5C8e2b4726AF54CA1449FEC18Bd1484",
      "multiplier": 5.5,
      "network": "ethereum",
    },
    CachedBoostMultiplier {
      "address": "0x19D97D8fA813EE2f51aD4B4e04EA08bAf4DFfC28",
      "multiplier": 12,
      "network": "ethereum",
    },
  ],
}
`;

exports[`boosts-indexer evaluateUserBoosts updates user boost if applicable 1`] = `
Object {
  "0xe6487033F5C8e2b4726AF54CA1449FEC18Bd1484": Array [
    CachedBoostMultiplier {
      "address": "0xe6487033F5C8e2b4726AF54CA1449FEC18Bd1484",
      "multiplier": 10,
      "network": "ethereum",
    },
  ],
}
`;

exports[`boosts-indexer evaluateUserBoosts uses existing user boost if applicable 1`] = `
Object {
  "0xe6487033F5C8e2b4726AF54CA1449FEC18Bd1484": Array [
    CachedBoostMultiplier {
      "address": "0xe6487033F5C8e2b4726AF54CA1449FEC18Bd1484",
      "multiplier": 5.5,
      "network": "ethereum",
    },
  ],
}
`;
